# SlicerSegmentEditorSurfaceCut

./: CMakeLists.txt  SegmentEditorSurfaceCut.py  SegmentEditorvolumeClip.py
SegmentEditorSurfaceCutLib/: SegmentEditorEffect.py
SegmentEditorvolumeClipLib/: SegmentEditorEffect.py
SlicerSegmentEditorSurfaceCut/: SegmentEditorSurfaceCut.py
SlicerSegmentEditorSurfaceCut/SegmentEditorSurfaceCutLib/: SegmentEditorEffect.py
